objects/pse__Practice__c.object
<CustomObject>
    <customHelpPage>pse__PracticeHelp</customHelpPage>
    <description>An entity that usually represents a product or business line. Practices are organized as an independent hierarchy determined by the Parent Practice field, with parent and child records of the same type. Every practice in the hierarchy may contain projects, resources (contacts), and other objects. The hierarchy allows roll-ups of revenue, cost, and time totals.</description>
    <fields>
        <fullName>pse__Action_Update_Current_Time_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Update Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Update_Date__c</fullName>
        <label>Actuals: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actuals: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Practices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Last_Update_Date__c</fullName>
        <label>Backlog: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backlog: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Practices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period_End_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Current Time Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Current Time Period For Practices</relationshipLabel>
        <relationshipName>CurrentTimePeriodForPractices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Default_Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Work Calendar</label>
        <referenceTo>pse__Work_Calendar__c</referenceTo>
        <relationshipLabel>Default Work Calendar for Practices:</relationshipLabel>
        <relationshipName>DefaultWorkCalendarForPractices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, data in this practice and any sub-practices are excluded from Utilization calculations when a calculation is run on a parent of this practice.</description>
        <inlineHelpText>When selected, data in this practice and any sub-practices are excluded from Utilization calculations when a calculation is run on a parent of this practice.</inlineHelpText>
        <label>Exclude from Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Global_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Global Practice For Sub-Practices:</relationshipLabel>
        <relationshipName>GlobalPracticeForSubPractices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Depth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hierarchy Depth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Billable_Hours__c</fullName>
        <description>The historical scheduled utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Credited_Hours__c</fullName>
        <description>The historical scheduled utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Excluded_Hours__c</fullName>
        <description>The historical scheduled utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Held_Hours__c</fullName>
        <label>Hist Sch Utilization Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The historical scheduled utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Billable_Hours__c</fullName>
        <description>The historical utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Calendar_Hours__c</fullName>
        <description>The historical utilization calendar hours for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Calendar Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Credited_Hours__c</fullName>
        <description>The historical utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Excluded_Hours__c</fullName>
        <description>The historical utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The historical utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Historical_Utilization_Target__c = 0,
IF(pse__Historical_Utilization__c &lt;= 0,0,1),
pse__Historical_Utilization__c / pse__Historical_Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target_Hours__c</fullName>
        <label>Historical Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target__c</fullName>
        <formula>IF(pse__Historical_Utilization_Calendar_Hours__c = 0,
0,
pse__Historical_Utilization_Target_Hours__c / pse__Historical_Utilization_Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization__c</fullName>
        <description>The historical utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Inactive_Project_Backlog__c</fullName>
        <label>Inactive Project Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Forecasting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this practice participate in forecasting?</description>
        <label>Include In Forecasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Margin__c</fullName>
        <formula>pse__Billings__c + pse__Pass_Through_Billings__c - pse__External_Costs__c - pse__Internal_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Other_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Immediate Sub-Practices</relationshipLabel>
        <relationshipName>ImmediateSubPractices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Pass_Through_Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pass-Through Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Plan_Last_Update_Date__c</fullName>
        <label>Plan: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Plan_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Practices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Planned Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Planned Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Planned External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Internal_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Planned Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Margin__c</fullName>
        <formula>pse__Planned_Billings__c - pse__Planned_External_Costs__c - pse__Planned_Internal_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Revenue__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Planned Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Utilization__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Planned Utilization</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Practices Owned</relationshipLabel>
        <relationshipName>PracticesHeaded</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice_ID_Chain__c</fullName>
        <label>Practice ID Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Name_Chain__c</fullName>
        <label>Practice Name Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pre-Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Reversed_ID_Chain__c</fullName>
        <description>System-generated reversed chain for linking to the practice.</description>
        <inlineHelpText>System-generated reversed chain for linking to the practice.</inlineHelpText>
        <label>Reversed Practice ID Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Backlog_Calculated_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Scheduled Backlog Calculated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Backlog_End_Date__c</fullName>
        <label>Scheduled Backlog End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Milestone__c</fullName>
        <label>Scheduled Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Time__c</fullName>
        <label>Scheduled Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Billable_Hours__c</fullName>
        <description>The scheduled utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Calendar_Hours__c</fullName>
        <description>The scheduled utilization calendar hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Calendar Hours</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Credited_Hours__c</fullName>
        <description>The scheduled utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Excluded_Hours__c</fullName>
        <description>The scheduled utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Held_Hours__c</fullName>
        <label>Scheduled Utilization Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The scheduled utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Scheduled_Utilization_Target__c = 0,
IF(pse__Scheduled_Utilization__c &lt;= 0,0,1),
pse__Scheduled_Utilization__c / pse__Scheduled_Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target_Hours__c</fullName>
        <label>Scheduled Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target__c</fullName>
        <formula>IF(pse__Scheduled_Utilization_Calendar_Hours__c = 0,
0,
pse__Scheduled_Utilization_Target_Hours__c / pse__Scheduled_Utilization_Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization__c</fullName>
        <description>The scheduled utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Total_Costs__c</fullName>
        <formula>pse__Internal_Costs__c + pse__External_Costs__c + pse__Expense_Costs__c + pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Time_Period_Hours__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <label>Total Time Period Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Utilization__c</fullName>
        <description>The overall (historical + scheduled) utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Backlog__c</fullName>
        <label>Unscheduled Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Calculation_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date that the utilization fields were last updated</description>
        <label>Utilization Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Elapsed_Hours__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <label>Utilization: Elapsed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Last_Calculation_Date__c</fullName>
        <label>Utilization: Last Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Last_Update_Date__c</fullName>
        <label>Utilization: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utilization: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Practices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Over_Full_Time_Period__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <label>Utilization: Over Full Time Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Period_End_Date__c</fullName>
        <label>Utilization Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Period_Start_Date__c</fullName>
        <label>Utilization Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Utilization_Target__c = 0,
IF(pse__Total_Utilization__c &lt;= 0,0,1),
pse__Total_Utilization__c / pse__Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Hours__c</fullName>
        <label>Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target__c</fullName>
        <formula>IF(pse__Historical_Utilization_Calendar_Hours__c + pse__Scheduled_Utilization_Calendar_Hours__c = 0,
0,
pse__Utilization_Target_Hours__c / ( pse__Historical_Utilization_Calendar_Hours__c + pse__Scheduled_Utilization_Calendar_Hours__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>[DEPRECATED, no longer used]</description>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Practice</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Parent_Practice__c</columns>
        <columns>pse__Global_Practice__c</columns>
        <columns>pse__Current_Time_Period__c</columns>
        <columns>pse__Current_Time_Period_End_Date__c</columns>
        <columns>pse__Planned_Bookings__c</columns>
        <columns>pse__Planned_Billings__c</columns>
        <columns>pse__Planned_Margin__c</columns>
        <columns>pse__Bookings__c</columns>
        <columns>pse__Billings__c</columns>
        <columns>pse__Total_Costs__c</columns>
        <columns>pse__Margin__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>pse__Include_In_Forecasting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Practice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practices</pluralLabel>
    <recordTypes>
        <fullName>TR_PS_Enterprise_Practice</fullName>
        <active>true</active>
        <label>TR PS Enterprise Practice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>pse__Practice_Currency_is_Constant</fullName>
        <active>true</active>
        <description>A Practice&apos;s Currency field value may not be updated once set.</description>
        <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>A Practice&apos;s Currency field value may not be updated once set.</errorMessage>
    </validationRules>
</CustomObject>